base/cicd/trigger/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  github-eventlistener
  labels:
    app.kubernetes.io/name: nginx-demo
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - gh-listen-nginx-demo-dev.s.pub-dev.tech
      secretName: gh-listen-tls
  rules:
    - host: gh-listen-nginx-demo-dev.s.pub-dev.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: el-github-listener
              port:
                number: 8080
